--- a/src/components/weather/weather.css
+++ b/src/components/weather/weather.css
@@ -7,7 +7,9 @@
     height: 40vmin;
     pointer-events: none;
   }
-  
+  h1 {
+    color: white;
+  }
   .App-header {
     background-color: #282c34;
     min-height: 100vh;
