--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@
 
 .parallaxTwo {
   /* Full height */
-  height: 100%;
+  height: 1000%;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
@@ -81,4 +81,47 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url("./images/flag.JPG");
+}
+
+.form-container {
+  margin-bottom: 50px !important;
+}
+
+.landcontainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 1180px;
+  width: 100%;
+  background: url("./images/clouds.PNG");
+  background-size: cover;
+  background-position: center;
+}
+
+.text {
+  font: 100em;
+}
+
+.registercontainer {
+  margin-bottom: 50px !important;
+  height: 1000%;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("./images/fwy.JPG");
+}
+
+.parallaxfour {
+  /* Full height */
+  height: 1900px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("./images/clouds.PNG");
 }
